--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header class="container-fluid shadow-lg py-3">
         <div class="container">
             <div class="row  align-items-center   ">
-                <div class="col-lg-6 text-lg-start text-center  mb-0 pb-0" >
+                <div class="col-lg-6 text-lg-start text-sm-start text-center col-sm-6 mb-0 pb-0" >
                    
                     <img class="img-fluid " src="images/logo_black 1.svg" alt="logo">
                 </div>
-                <div class="col-lg-6 d-flex gap-2 justify-content-end  btncover">
+                <div class="col-lg-6 d-flex gap-2 justify-content-end justify-content-sm-end col-sm-6 p-sm-3 btncover">
                     <button class="btn wb "><i class="fa-brands fa-whatsapp"></i>Chat With Us</button>
                     <button class="btn cb"><i class="fa-solid fa-phone"></i>Call Us</button>
                 </div>
