--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>umair</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="media.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,5 +28,21 @@
             
         </div>
     </header>
+    <section class="container-fluid  py-3">
+        <div class="container">
+            <div class="row">
+                <div class="text col-lg-6  col-sm-12  ">
+                    <h1>Career Opportunities <br> in Digital Marketing</h1>
+                    <p>Digital marketing course so good,you only pay-after- <br>placement</p>
+                    <ul>
+                        <li><i class="fa-solid fa-circle-check"></i>Specialization: Performance Marketing</li>
+                        <li><i class="fa-solid fa-circle-check"></i>Min salary of Rs 4.5 LPA</li>
+                        <li><i class="fa-solid fa-circle-check"></i>50 seats only</li>
+                    </ul>
+                </div>
+                <form action=""></form>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
