--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="row">
                 <div class="text col-lg-6  col-sm-12  ">
                     <h1>Career Opportunities <br> in Digital Marketing</h1>
-                    <p>Digital marketing course so good,you only pay-after- <br>placement</p>
+                    <p>Digital marketing course so good,you only pay-after-placement</p>
                     <ul>
                         <li><i class="fa-solid fa-circle-check"></i>Specialization: Performance Marketing</li>
                         <li><i class="fa-solid fa-circle-check"></i>Min salary of Rs 4.5 LPA</li>
