--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>umair</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"  />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="media.css">
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="media.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="container-fluid shadow-lg py-3">
         <div class="container">
             <div class="row  align-items-center   ">
-                <div class="col-lg-6 text-lg-start text-sm-start text-center col-sm-6 mb-0 pb-0" >
-                   
+                <div class="col-lg-6 text-lg-start text-sm-start text-center col-sm-6 mb-0 pb-0">
+
                     <img class="img-fluid " src="images/logo_black 1.svg" alt="logo">
                 </div>
                 <div class="col-lg-6 d-flex gap-2 justify-content-end justify-content-sm-end col-sm-6 p-sm-3 btncover">
@@ -25,10 +28,10 @@
                     <button class="btn cb"><i class="fa-solid fa-phone"></i>Call Us</button>
                 </div>
             </div>
-            
+
         </div>
     </header>
-    <section class="container-fluid  py-3">
+    <section class="container-fluid  py-5 ">
         <div class="container">
             <div class="row">
                 <div class="text col-lg-6  col-sm-12  ">
@@ -39,10 +42,35 @@
                         <li><i class="fa-solid fa-circle-check"></i>Min salary of Rs 4.5 LPA</li>
                         <li><i class="fa-solid fa-circle-check"></i>50 seats only</li>
                     </ul>
+                    <div class="flow d-flex gap-3 "><button class="btn book ">Book 2 Days Demo</button>
+                    <button class="btn download"><i class="fa-solid fa-cloud-arrow-down"></i>Download
+                        Curriculum</button></div>
                 </div>
-                <form action=""></form>
+                <form action="" class="text col-lg-6  col-sm-12 shadow-lg py-3  gy-5 gx-5">
+                    <h4 style="font-size: 18px;">Book Your Free Class Now!</h4>
+                    <p style="font-size: 12px;">2 days of free demo classes without <br>
+                        paying in advance!</p>
+                    <div class="mb-3">
+                        <label class="form-label">Name</label>
+                        <input type="email" class="form-control" placeholder="Enter Your Name">
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Email address</label>
+                        <input type="email" class="form-control" placeholder="Enter your Email">
+                    </div>
+                    <div class=" mb-3">
+                        <label class="form-label">Mobile Number </label>
+                        <div class="input-group">
+                            <span class="input-group-text">+92</span>
+                            <input type="text" class="form-control" placeholder="Enter your mobile number"
+                                aria-label="Mobile Number" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <button class="btn register">Register Now</button>
+                </form>
             </div>
         </div>
     </section>
 </body>
+
 </html>
