--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         paying in advance!</p>
                     <div class="mb-3">
                         <label class="form-label">Name</label>
-                        <input type="email" class="form-control" placeholder="Enter Your Name">
+                        <input type="text" class="form-control" placeholder="Enter Your Name">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">Email address</label>
