--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                         <li><i class="fa-solid fa-circle-check"></i>50 seats only</li>
                     </ul>
                     <div class="flow d-flex gap-3 "><button class="btn book ">Book 2 Days Demo</button>
-                    <button class="btn download"><i class="fa-solid fa-cloud-arrow-down"></i>Download
-                        Curriculum</button></div>
+                        <button class="btn download"><i class="fa-solid fa-cloud-arrow-down"></i>Download
+                            Curriculum</button>
+                    </div>
                 </div>
                 <form action="" class="text col-lg-6  col-sm-12 shadow-lg py-3  gy-5 gx-5">
                     <h4 style="font-size: 18px;">Book Your Free Class Now!</h4>
@@ -68,6 +69,31 @@
                     </div>
                     <button class="btn register">Register Now</button>
                 </form>
+            </div>
+            <div
+                class="row mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
+
+                <div class="col border cole ">
+                    <h1>1000+</h1>
+                    <p>Students Trained</p>
+                </div>
+                <div class="col border cole ">
+                    <h1>₹4.5 LPA</h1>
+                    <p>Students Trained</p>
+                </div>
+                <div class="col border cole ">
+                    <h1>320+</h1>
+                    <p>Recruiting Partners</p>
+                </div>
+                <div class="col border cole">
+                    <h1>10:00 am</h1>
+                    <p>Program Timings </p>
+                </div>
+                <div class="col border cole to ">
+                    <h1>11th May</h1>
+                    <p>Next Batch Starts</p>
+                </div>
+
             </div>
         </div>
     </section>
