--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                     <button class="btn register">Register Now</button>
                 </form>
             </div>
-            <div
-                class="row mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
+            <div class="row mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
 
                 <div class="col border cole ">
                     <h1>1000+</h1>
@@ -93,6 +92,60 @@
                     <h1>11th May</h1>
                     <p>Next Batch Starts</p>
                 </div>
+
+            </div>
+            <div class="row   ">
+                <div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3  ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div><div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div><div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start  shadow-lg justify-content-lg-start justify-content-center  text-lg-start text-center ">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Assignments <br> & Modules tests</h3>
+                            <p class="p1">Test your knowledge</p>
+                        </div>
+                    </div>
+                </div>
+                 
+
 
             </div>
         </div>
