--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             Curriculum</button>
                     </div>
                 </div>
-                <form action="" class="text col-lg-6  col-sm-12 shadow-lg py-3  gy-5 gx-5">
+                <form action="" class="text col-lg-6 slide-left col-sm-12 shadow-lg py-3  gy-5 gx-5">
                     <h4 style="font-size: 18px;">Book Your Free Class Now!</h4>
                     <p style="font-size: 12px;">2 days of free demo classes without <br>
                         paying in advance!</p>
@@ -70,7 +70,7 @@
                     <button class="btn register">Register Now</button>
                 </form>
             </div>
-            <div class="row mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
+            <div class="row slide-left mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
 
                 <div class="col border cole ">
                     <h1>1000+</h1>
@@ -94,7 +94,7 @@
                 </div>
 
             </div>
-            <div class="row   ">
+            <div class="row  slide-left ">
                 <div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3  ">
                     <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
                         <img src="./images/Frame 354.png" alt="">
