--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             Curriculum</button>
                     </div>
                 </div>
-                <form action="" class="text col-lg-6 slide-left col-sm-12 shadow-lg py-3  gy-5 gx-5">
+                <form action="" class="text col-lg-6  col-sm-12 shadow-lg py-3  gy-5 gx-5">
                     <h4 style="font-size: 18px;">Book Your Free Class Now!</h4>
                     <p style="font-size: 12px;">2 days of free demo classes without <br>
                         paying in advance!</p>
@@ -70,7 +70,7 @@
                     <button class="btn register">Register Now</button>
                 </form>
             </div>
-            <div class="row slide-left mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
+            <div class="row mt-5 shadow-lg p-3 text-center row-cols-lg-5  row-cols-sm-3  row-cols-1 gy-3 gap-lg-0  ">
 
                 <div class="col border cole ">
                     <h1>1000+</h1>
@@ -95,56 +95,61 @@
 
             </div>
             <div class="row  slide-left ">
-                <div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3  ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
-                        <img src="./images/Frame 354.png" alt="">
-                        <div>
-                            <h3 class="h3">Assignments <br> & Modules tests</h3>
-                            <p class="p1">Test your knowledge</p>
-                        </div>
-                    </div>
-                </div><div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
-                        <img src="./images/Frame 354.png" alt="">
-                        <div>
-                            <h3 class="h3">Assignments <br> & Modules tests</h3>
-                            <p class="p1">Test your knowledge</p>
-                        </div>
-                    </div>
-                </div><div class=" col-lg-4 col-sm-12 col-md-6 col-12 gy-3 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center">
-                        <img src="./images/Frame 354.png" alt="">
-                        <div>
-                            <h3 class="h3">Assignments <br> & Modules tests</h3>
-                            <p class="p1">Test your knowledge</p>
-                        </div>
-                    </div>
-                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center ">
-                        <img src="./images/Frame 354.png" alt="">
-                        <div>
-                            <h3 class="h3">Assignments <br> & Modules tests</h3>
-                            <p class="p1">Test your knowledge</p>
-                        </div>
-                    </div>
-                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start justify-content-lg-start  shadow-lg justify-content-center  text-lg-start text-center">
-                        <img src="./images/Frame 354.png" alt="">
-                        <div>
-                            <h3 class="h3">Assignments <br> & Modules tests</h3>
-                            <p class="p1">Test your knowledge</p>
-                        </div>
-                    </div>
-                </div><div class=" col-lg-4 col-sm-12 col-12 gy-3 col-md-6 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start  shadow-lg justify-content-lg-start justify-content-center  text-lg-start text-center ">
-                        <img src="./images/Frame 354.png" alt="">
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-md-12 col-12 gy-3  ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg ">
+                        <img src="./images/Frame 352 (1).png" alt="">
                         <div>
                             <h3 class="h3">Assignments <br> & Modules tests</h3>
                             <p class="p1">Test your knowledge</p>
                         </div>
                     </div>
                 </div>
-                 
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-md-12 col-12 gy-3 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg ">
+                        <img src="./images/Frame 353.png" alt="">
+                        <div>
+                            <h3 class="h3">Industry-recognized <br> Certification </h3>
+                            <p class="p1">Stand out to your professional</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-md-12 col-12 gy-3 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg">
+                        <img src="./images/Frame 354.png" alt="">
+                        <div>
+                            <h3 class="h3">Live classes & <br> recorded lectures</h3>
+                            <p class="p1">Best of both worlds of learning</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-12 gy-3 col-md-12 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg  ">
+                        <img src="./images/Frame 352.png" alt="">
+                        <div>
+                            <h3 class="h3">Downloadable <br> Content</h3>
+                            <p class="p1">With lifetime access</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-12 gy-3 col-md-12 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg ">
+                        <img src="./images/Frame 353 (1).png" alt="">
+                        <div>
+                            <h3 class="h3">6 Industry level <br> projects</h3>
+                            <p class="p1">Get practical skills</p>
+                        </div>
+                    </div>
+                </div>
+                <div class=" col-lg-6 col-xl-4 col-sm-12 col-12 gy-3 col-md-12 ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start  shadow-lg">
+                        <img src="./images/Frame 354 (1).png" alt="">
+                        <div>
+                            <h3 class="h3">4 Live Doubt clearing <br> Session</h3>
+                            <p class="p1">Gain a clear understanding</p>
+                        </div>
+                    </div>
+                </div>
+
 
 
             </div>
