--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class=" col-lg-6 col-xl-4 col-sm-12 col-md-12 col-12 gy-3 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start shadow-lg ">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-center shadow-lg ">
                         <img src="./images/Frame 353.png" alt="">
                         <div>
                             <h3 class="h3">Industry-recognized <br> Certification </h3>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class=" col-lg-6 col-xl-4 col-sm-12 col-12 gy-3 col-md-12 ">
-                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-start  shadow-lg">
+                    <div class="bg-white mt-4 p-3 d-flex gap-3 align-items-center  shadow-lg">
                         <img src="./images/Frame 354 (1).png" alt="">
                         <div>
                             <h3 class="h3">4 Live Doubt clearing <br> Session</h3>
